--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ section {
 h1 {
   display: block;
   font-size: 50px;
-  padding: 30px 0 0;
+  padding: 30px 0 10px;
   text-align: center;
   width: 100%;
 }
